--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Ian Waudby-Smith 
-url: "https://ian.waudbysmith.com"
+title: Alec McClean 
+url: "https://alecmcclean.com"
 baseurl: ""
 
 markdown: kramdown
